--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -6,7 +6,7 @@
 
 {% include excol.html type="start" id="one" %}
 #### Details
-{% include excol.html type="middle" %}
+{% include excol.html type="middle" id="t"%}
 
 Offer type
 : {{ offer.offer_type }}
