--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -20,4 +20,17 @@ details div {
 }
 
 
+#filters {
+  font-size: 85%;
+  grid-column: 1 / 4;
+  padding-right: 2em;
+  border-right: 1px solid #ccc;
+}
 
+#results {
+  display: flex;
+  position: relative;
+  padding-top: 2em;
+  margin-top: 2em;
+  border-top: 1px solid #ccc;
+}
