--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -34,3 +34,41 @@ details div {
   margin-top: 2em;
   border-top: 1px solid #ccc;
 }
+
+
+
+
+.header-sup {
+  grid-column: 1 / 8;
+}
+main>header {
+  grid-column: 1 / 10;
+}
+.box {
+  grid-column: 1 / 9;
+}
+
+.header-sup {
+  margin-bottom: 48px;
+}
+
+.header-sup p:first-child {
+  margin-top: 0;
+  font-size: 125%;
+}
+.tag {
+  text-decoration: none;
+  display: inline-block;
+  font-weight: 400;
+  border-radius: 1em;
+  padding: 0 .75em;
+  font-size: 75%;
+  background-color: var(--cloudy-subtle);
+  margin-left: .5em;
+  display: none;
+}
+
+.tag:hover {
+  background-color: var(--w3c-blue);
+  color: #fff;
+}
