--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -19,15 +19,27 @@ details div {
   border: solid 1px var(--line-grey); */
 }
 
-
-#filters {
-  font-size: 85%;
-  grid-column: 1 / 4;
-  padding-right: 2em;
-  border-right: 1px solid #ccc;
+.offers {
+  display: contents;
 }
 
-#results {
+@media (min-width: 60em) {
+  .offers-filters {
+    font-size: 85%;
+    grid-column: 1 / 4;
+    padding-right: 2em;
+    border-right: 1px solid #ccc;
+  }
+}
+
+@media (min-width: 72em) {
+  .offers-filters {
+    grid-column: 2 / 4;
+    padding-right: 2em;
+  }
+}
+
+.offers-results {
   display: flex;
   position: relative;
   padding-top: 2em;
@@ -35,40 +47,17 @@ details div {
   border-top: 1px solid #ccc;
 }
 
-
-
-
-.header-sup {
-  grid-column: 1 / 8;
-}
-main>header {
-  grid-column: 1 / 10;
-}
-.box {
-  grid-column: 1 / 9;
+@media (min-width: 60em) {
+  .offers-results {
+    grid-column: 4 / span 7;
+    padding-top: 0;
+    margin-top: 0;
+    border-top: 0;
+  }
 }
 
-.header-sup {
-  margin-bottom: 48px;
-}
-
-.header-sup p:first-child {
-  margin-top: 0;
-  font-size: 125%;
-}
-.tag {
-  text-decoration: none;
-  display: inline-block;
-  font-weight: 400;
-  border-radius: 1em;
-  padding: 0 .75em;
-  font-size: 75%;
-  background-color: var(--cloudy-subtle);
-  margin-left: .5em;
-  display: none;
-}
-
-.tag:hover {
-  background-color: var(--w3c-blue);
-  color: #fff;
+@media (min-width: 72em) {
+  .offers-results {
+    grid-column: 4 / span 5;
+  }
 }
