--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -19,6 +19,23 @@ details div {
   border: solid 1px var(--line-grey); */
 }
 
+main>header {
+  grid-column: 1 / 10;
+}
+
+@media ( min-width: 72em) {
+  main>header {
+    grid-column: 2 / 9;
+  }
+}
+
+.box {
+  grid-column: 1 / 9;
+}
+
+
+
+
 .offers {
   display: contents;
 }
@@ -61,3 +78,15 @@ details div {
     grid-column: 4 / span 5;
   }
 }
+.tag {
+  text-decoration: none;
+  display: inline-block;
+  font-weight: 400;
+  border-radius: 1em;
+  padding: 0 .75em;
+  font-size: 75%;
+  background-color: var(--cloudy-subtle);
+  margin-left: .5em;
+  display: none;
+}
+
