--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -9,6 +9,11 @@ main>header {
   grid-column: 1 / 10;
 }
 
+.main p:first-child {
+  grid-column: 2/9;
+}
+
+
 @media ( min-width: 72em) {
   main>header {
     grid-column: 2 / 9;
@@ -19,10 +24,7 @@ main>header {
   grid-column: 1 / 9;
 }
 
-.header-sup p:first-child {
-  margin-top: 0;
-  font-size: 125%;
-}
+
 
 #left-col h2 {
   margin: 20px 0 20px;
