--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -66,4 +66,5 @@ This information was last updated on {{ offer.offer_info_last_update}}.
 {% endif %} 
 
 {% include excol.html type="end" %}
+{% include excol.html type="end" %}
 {% include box.html type="end" %}
