--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -4,7 +4,8 @@
 {% include box.html type="start" title=offer_title id=offer.id h="3" %}
 {{ offer.description }}
 
-{% include excol.html type="start" id="one" %}
+{% capture offer_details_id %} details_{{offer.id}}{% endcapture %}
+{% include excol.html type="start" id=offer_details_id %}
 #### Details
 {% include excol.html type="middle"%}
 
@@ -64,5 +65,7 @@ This information was last updated on {{ offer.offer_info_last_update}}.
 {% if offer.offer_content_last_update %}
   The content of this offer was last updated on {{ offer.offer_content_last_update}}.
 {% endif %} 
+
+{% include excol.html type="end" %}
 
 {% include box.html type="end" %}
