--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,8 +1,6 @@
 {% capture offer_title %}<a href="{{ offer.offer_link }}">{{ offer.name }}</a> by {{ offer.provider }}{% endcapture %}
-
-
+{% include box.html type="start" title=offer_title id=offer.id h="3" %}
 {{ offer.description }}
-
 {% capture offer_details_id %} details_{{offer.id}}{% endcapture %}
 {% include excol.html type="start" id=offer_details_id %}
 #### Details
@@ -64,6 +62,5 @@ This information was last updated on {{ offer.offer_info_last_update}}.
 {% if offer.offer_content_last_update %}
   The content of this offer was last updated on {{ offer.offer_content_last_update}}.
 {% endif %} 
-
 {% include excol.html type="end" %}
-
+{% include box.html type="end" %}
