--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,6 +1,9 @@
-{% capture offer_title %}<a href="{{ offer.offer_link }}">{{ offer.name }}</a> by {{ offer.provider }}{% endcapture %}
-{% include box.html type="start" title=offer_title id=offer.id h="3" %}
-{{ offer.description }}
-{% capture offer_details_id %} details_{{offer.id}}{% endcapture %}
+{::nomarkdown}
+{% include box.html type="start" title="Standard header" %}
+{:/}
 
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem laudantium, molestias perspiciatis corporis aspernatur earum quibusdam, sequi, error pariatur delectus accusantium, cum! Maxime ad, eos ea. Ab labore aliquam quam!
+
+{::nomarkdown}
 {% include box.html type="end" %}
+{:/}
