--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,9 +1,66 @@
-{::nomarkdown}
+{% capture offer_title %}<a href="{{ offer.offer_link }}">{{ offer.name }}</a> by {{ offer.provider }}{% endcapture %}
 {% include box.html type="start" title="Standard header" %}
-{:/}
+{{ offer.description }}
+{% capture offer_details_id %} details_{{offer.id}}{% endcapture %}
+{% include excol.html type="start" id=offer_details_id %}
+#### Details
+{% include excol.html type="middle"%}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem laudantium, molestias perspiciatis corporis aspernatur earum quibusdam, sequi, error pariatur delectus accusantium, cum! Maxime ad, eos ea. Ab labore aliquam quam!
+Offer type
+: {{ offer.offer_type }}
 
-{::nomarkdown}
+Audience
+: {{ offer.audience | join: ", " }}
+
+Level
+: {{ offer.level}}
+
+Prerequisites
+: {{ offer.prerequisites | join: ", "}}
+
+Topics
+: {{ offer.keywords_topics | join: ", "}}
+  
+WAI Curricula module
+{% if offer.curricula_link %}
+: <a href="{{ offer.curricula_link}}" rel="external">{{ offer.curricula_correspondence }}</a>
+{% else %}
+: Not provided
+{% endif %}
+
+Language
+{% assign langIndex = offer.language[0] %}
+: {{ site.data.lang[langIndex].name }} ({{ site.data.lang[langIndex].nativeName }})
+
+Country
+{% assign countryIndex = offer.country[0] %}
+: {{ site.data.countries[countryIndex].name }} ({{ site.data.countries[countryIndex].nativeName }})
+
+Format
+: {{ offer.format}}
+
+Learning
+: {{ offer.learning | join: ", "}}
+
+Platform
+: {{ offer.platform}}
+
+Duration
+: {{ offer.duration}}
+
+Cost
+: {{ offer.cost}}
+
+Web site
+: <a href="{{ offer.curricula_link}}" rel="external">{{ offer.offer_link}}</a>
+
+Reviews page
+: <a href="{{ offer.curricula_link}}" rel="external">{{ offer.offer_link_reviews}}</a>
+        
+        
+This information was last updated on {{ offer.offer_info_last_update}}.
+{% if offer.offer_content_last_update %}
+  The content of this offer was last updated on {{ offer.offer_content_last_update}}.
+{% endif %} 
+{% include excol.html type="end" %}
 {% include box.html type="end" %}
-{:/}
