--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,5 +1,5 @@
 {% capture offer_title %}<a href="{{ offer.offer_link }}">{{ offer.name }}</a> by {{ offer.provider }}{% endcapture %}
-{% include box.html type="start" title="Standard header" %}
+{% include box.html type="start" title=offer_title %}
 {{ offer.description }}
 {% capture offer_details_id %} details_{{offer.id}}{% endcapture %}
 {% include excol.html type="start" id=offer_details_id %}
