--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,9 +1,9 @@
 {% capture offer_title %}<a href="{{ offer.offer_link }}">{{ offer.name }}</a> by {{ offer.provider }}{% endcapture %}
 {% capture offer_section_identifier %}aside_{{ offer.id }}{% endcapture %}
-
-{% include box.html type="start" title=offer_title id=offer_section_identifier %}
-{{ offer.description }}
 {% capture offer_details_id %} details_{{offer.id}}{% endcapture %}
+
+{% include box.html type="start" title=offer_title id=offer.id %}
+{{ offer.description }}
 {% include excol.html type="start" id=offer_details_id %}
 #### Details
 {% include excol.html type="middle"%}
