--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -64,11 +64,6 @@ main>header {
   }
 }
 
-.offers-filters legend {
-  font-size: 1em;
-  margin-bottom: 8px;
-}
-
 .offers-filters input {
   margin-right: .5em;
 }
@@ -77,9 +72,15 @@ main>header {
   width: 100%;
 }
 
-.clear-button {
+.button-clear-button {
   margin-bottom: 2em;
 }
+
+
+/* .offers-filters legend {
+  font-size: 1em;
+  margin-bottom: 8px;
+} */
 
 
 
