--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -84,14 +84,14 @@ main>header {
  display: inline !important;
 }
 
-.offers-offers {
+.offers-list{
   padding-top: 2em;
   margin-top: 2em;
   border-top: 1px solid #ccc;
 }
 
 @media (min-width: 60em) {
-  .offers-offers {
+  .offers-list {
     grid-column: 4 / span 7;
     padding-top: 0;
     margin-top: 0;
@@ -100,14 +100,11 @@ main>header {
 }
 
 @media (min-width: 72em) {
-  .offers-offers {
+  .offers-list {
     grid-column: 4 / span 5;
   }
 }
 
-.offers-offers p:first-child {
-  margin-top: 0;
-}
 
 
 
