--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -120,7 +120,7 @@ details dt::after {
   margin-bottom: 0.5em !important;
 }
 
-#offers-list div {
+#details div {
   margin-left: -32px;
   padding: 8px 16px;
   /* background-color: var(--off-white);
@@ -128,27 +128,11 @@ details dt::after {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.disclaimer {
+#disclaimer {
   border: 1px solid var(--line-grey);
 }
 
-.disclaimer h2 {
+#disclaimer h2 {
   background-color: gold;
   margin: 0px !important;
   padding: 10px;
@@ -156,103 +140,8 @@ details dt::after {
   color: var(--off-black);
 }
 
-.disclaimer p {
+#disclaimer p {
   padding: 10px;
-}
-
-
-
-
-a.more-info {
-  color: var(--light-blue);
-  margin-left: .5em;
-  font-size: .8rem;
-}
-
-a.more-info:hover {
-  color: var(--ocean);
-}
-
-.more-info__icon {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.more-info__icon svg {
-  height: 1.5em;
-}
-
-
-
-
-
-
-
-.offer {
-  background-color: white;
-  padding: 1em;
-  border: 1px solid var(--line-grey);
-  margin-bottom: 1em;
-  box-shadow: 1px 1px 4px -4px #000;
-}
-
-.offer h3 {
-  margin: 0;
-  font-size: 1em;
-}
-
-.offer h3 a {
-  color: var(--wai-green);
-}
-
-.offer h3+p {
-  margin-top: 0;
-}
-
-.offer h3 span {
-  font-weight: normal;
-}
-
-.offer h4 {
-  font-size: 100%;
-}
-
-#offer__features {
-  margin: 1em -1em -1em -3em;
-  background-color: var(--off-white);
-  padding: 1em;
-  border-top: 1px solid var(--line-grey);
-}
-
-.offer__features-a11y {
-  grid-column: 1 / -1;
-}
-
-.offer__features-a11y li>strong {
-  font-style: normal;
-  font-weight: normal;
-}
-
-.offer__report {
-  float: right;
-  color: var(--grey);
-}
-
-.tag {
-  text-decoration: none;
-  display: inline-block;
-  font-weight: 400;
-  border-radius: 1em;
-  padding: 0 .75em;
-  font-size: 75%;
-  background-color: var(--cloudy-subtle);
-  margin-left: .5em;
-  display: none;
-}
-
-.tag:hover {
-  background-color: var(--w3c-blue);
-  color: #fff;
 }
 
 .status:not([hidden]) {
@@ -269,6 +158,7 @@ a.more-info:hover {
 
 
 
+/*
 .submit-a-offer {
   grid-column: 8 / 10;
   align-self: start;
@@ -281,21 +171,7 @@ a.more-info:hover {
     grid-column: 7 / 9;
   }
 }
-
-/* @media (min-width: 30em) {
-  .offer__features dt small {
-    font-weight: normal;
-    margin-left: 1em;
-  }
-  .offer__features p:last-child {
-    margin-bottom: 0;
-  }  
-}
-@media (min-width: 50em) {
-  .offer__features dl { 
-    grid-template-columns: repeat(2, auto 1fr);
-  }
-} */
+*/
 
 
 
