--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -101,12 +101,12 @@ main>header {
 
 @media (min-width: 72em) {
   #offers-list {
-    grid-column: 4 / span 5;
+    grid-column: 4 / span 6;
   }
 }
 
 #offers-list dd {
-  margin: 1em;
+  margin: 0.5em;
 }
 
 details dt::after {
@@ -115,7 +115,7 @@ details dt::after {
 
 #offers-list dt {
   float: left;
-  margin: 0 0.5em 0 !important;
+  margin: 0 0.5em 0 0 !important;
 }
 
 
