--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -119,12 +119,30 @@ details dt::after {
 }
 
 
+/* 
 #details div {
-  margin-left: -32px;
-  padding: 8px 16px;
-  /* background-color: var(--off-white);
-  border: solid 1px var(--line-grey); */
+  margin-bottom: -8px;
+  margin-right: -16px;
+  margin-left: -48px;
+  padding-left: 18px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: #d0e1f1;
+  border-radius: 3px;
 }
+*/
+
+#details_offer11 div:first-child{
+  margin-bottom: -8px;
+  margin-right: -16px;
+  margin-left: -48px;
+  padding-left: 18px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: #d0e1f1;
+  border-radius: 3px;
+}
+
 
 
 #disclaimer {
