--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -126,7 +126,7 @@ details dt::after {
 }
 */
 
-html > body:nth-child(2) > div:nth-child(6) > main:nth-child(2) > div:nth-child(4) > div:nth-child(2) > aside:nth-child(4) > div:nth-child(2) > details:nth-child(1) > div:nth-child(2) {
+html>body:nth-child(2)>div:nth-child(6)>main:nth-child(2)>div:nth-child(4)>div:nth-child(2)>aside:nth-child(4)>div:nth-child(2)>details:nth-child(1)>div:nth-child(2) {
   margin-bottom: -8px;
   margin-right: -16px;
   margin-left: -48px;
@@ -137,14 +137,14 @@ html > body:nth-child(2) > div:nth-child(6) > main:nth-child(2) > div:nth-child(
   border-radius: 3px;
 }
 
-html > body:nth-child(2) > div:nth-child(6) > main:nth-child(2) > div:nth-child(4) > div:nth-child(2) > aside:nth-child(5) > div:nth-child(2) > details:nth-child(1) > div:nth-child(2) {
+html>body:nth-child(2)>div:nth-child(6)>main:nth-child(2)>div:nth-child(4)>div:nth-child(2)>aside:nth-child(5)>div:nth-child(2)>details:nth-child(1)>div:nth-child(2) {
   border-top: solid 1px var(--line-grey);
   margin-left: -47px;
   margin-right: -16px;
   padding-left: 16px;
 }
 
-html > body:nth-child(2) > div:nth-child(6) > main:nth-child(2) > div:nth-child(4) > div:nth-child(2) > aside:nth-child(6) > div:nth-child(2) > details:nth-child(1) > div:nth-child(2) {
+html>body:nth-child(2)>div:nth-child(6)>main:nth-child(2)>div:nth-child(4)>div:nth-child(2)>aside:nth-child(6)>div:nth-child(2)>details:nth-child(1)>div:nth-child(2) {
   border: solid 1px var(--line-grey);
   padding-left: 16px;
   margin-bottom: 32px;
@@ -193,3 +193,19 @@ html > body:nth-child(2) > div:nth-child(6) > main:nth-child(2) > div:nth-child(
   }
 }
 */
+
+#helpimprove {
+  grid-column: 2 / 10;
+}
+
+@media (min-width: 60em) {
+  .default-grid.page-footer .inner {
+    grid-column: 2/10;
+  }
+}
+
+.page-footer .inner {
+  grid-area: content;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
