--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -127,10 +127,6 @@ details dt::after {
 
 /* 
 #details div {
-}
-*/
-
-html>body:nth-child(2)>div:nth-child(6)>main:nth-child(2)>div:nth-child(4)>div:nth-child(2)>aside:nth-child(4)>div:nth-child(2)>details:nth-child(1)>div:nth-child(2) {
   margin-bottom: -8px;
   margin-right: -16px;
   margin-left: -48px;
@@ -141,14 +137,15 @@ html>body:nth-child(2)>div:nth-child(6)>main:nth-child(2)>div:nth-child(4)>div:n
   border-radius: 3px;
 }
 
-html>body:nth-child(2)>div:nth-child(6)>main:nth-child(2)>div:nth-child(4)>div:nth-child(2)>aside:nth-child(5)>div:nth-child(2)>details:nth-child(1)>div:nth-child(2) {
+#details div {
   border-top: solid 1px var(--line-grey);
   margin-left: -47px;
   margin-right: -16px;
   padding-left: 16px;
 }
+*/
 
-html>body:nth-child(2)>div:nth-child(6)>main:nth-child(2)>div:nth-child(4)>div:nth-child(2)>aside:nth-child(6)>div:nth-child(2)>details:nth-child(1)>div:nth-child(2) {
+#details div{
   border: solid 1px var(--line-grey);
   padding-left: 16px;
   margin-bottom: 32px;
