--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -145,7 +145,7 @@ details dt::after {
 }
 */
 
-#details div{
+details>div{
   border: solid 1px var(--line-grey);
   padding-left: 16px;
   margin-bottom: 32px;
