offer type -> type

--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -8,8 +8,8 @@
 #### Details
 {% include excol.html type="middle"%}
 
-Offer type
-: {{ offer.offer_type }}
+Type
+: {{ offer.type }}
 
 Audience
 : {{ offer.audience | join: ", " }}
