--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -47,6 +47,9 @@ Learning
 Platform
 : {{ offer.platform}}
 
+Accessibility resources
+: {{offer.accessibility_resources}}
+
 Duration
 : {{ offer.duration}}
 
