--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -48,7 +48,7 @@ Platform
 : {{ offer.platform}}
 
 Accessibility resources
-: {{offer.accessibility_resources}}
+: {{offer.accessibility_resources | join: ", "}}
 
 Duration
 : {{ offer.duration}}
