--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -160,8 +160,9 @@ details>div{
 
 details>div{
   border-top: solid 1px var(--line-grey);
-  margin-left: -48px;
-  margin-right: -16px;
+  margin-left: -40px;
+  margin-right: -8px;
+  margin-bottom: -8px;
   padding-left: 16px;
   background-color: var(--off-white);
 }
