--- a/_includes/submit-an-offer.liquid
+++ b/_includes/submit-an-offer.liquid
@@ -1,4 +1,4 @@
-{% for site.data.filters in filter %}
+{% for filter in site.data.filters %}
             
 <fieldset id="{{ filter.id }}">
   <legend class="label">{{ filter.name }}</legend>
