--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -5,9 +5,8 @@
   {% for modules in curricula.modules %}
   <div class="radio-field">
       <input type="checkbox" id="offer-{{ modules.id }}" name="offer-{{ modules.id }}">
-      <label for="offer-{{ module.id }}">{{ module.name }}</label>
+      <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
   </div>
-
   {% endfor %}
 </fieldset>
 {% endfor %}
