--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,33 +1,23 @@
 {% for curricula in site.data.wai-curricula %}
 
 
-
-
-
-
-{% include excol.html type="start" id="optional-id" %}
+{% include excol.html type="start"%}
 
 <fieldset id="{{ curricula.id }}">
+
     <legend>{{ curricula.name }}</legend>
 
+    {% include excol.html type="middle" %}
 
-
-{% include excol.html type="middle" %}
-
-{% for modules in curricula.modules %}
-<div class="radio-field">
-    <input type="checkbox" id="offer-{{ modules.id }}" name="offer-{{ modules.id }}">
-    <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
-</div>
-{% endfor %}
+    {% for modules in curricula.modules %}
+    <div class="radio-field">
+        <input type="checkbox" id="offer-{{ modules.id }}" name="offer-{{ modules.id }}">
+        <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
+    </div>
+    {% endfor %}
 
 </fieldset>
 
 {% include excol.html type="end" %}
-
-
-
-
-
 
 {% endfor %}
