--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,25 +1,12 @@
-<fieldset id="offer-wai-curricula"></fieldset>
-
 {% for curricula in site.data.wai-curricula %}
-
 {% include excol.html type="start"%}
-
-    <legend>{{ curricula.name }}</legend>
-
+    {{ curricula.name }}
     {% include excol.html type="middle" %}
-
     {% for modules in curricula.modules %}
     <div class="radio-field">
         <input type="checkbox" id="offer-{{ modules.id }}" name="offer-{{ modules.id }}">
         <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
     </div>
     {% endfor %}
-
-
-
 {% include excol.html type="end" %}
-
-
 {% endfor %}
-
-</fieldset>
