--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,12 +1,12 @@
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start"%}
-    {{ curricula.name }}
+{::nomarkdown}{{ curricula.name }}{:/}
     {% include excol.html type="middle" %}
-    {% for modules in curricula.modules %}
+    {::nomarkdown}{% for modules in curricula.modules %}
     <div class="radio-field">
         <input type="checkbox" id="offer-{{ modules.id }}" name="offer-{{ modules.id }}">
         <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
     </div>
-    {% endfor %}
+    {% endfor %}{:/}
 {% include excol.html type="end" %}
-{% endfor %}
+{::nomarkdown}{% endfor %}{:/}
