--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -3,7 +3,7 @@
 {% for curricula in site.data.wai-curricula %}
  
     <p class="expl">{{ curricula.name }}</p>
-    {% include showhidebutton.html showtext="{{ curricula.name }}" hidetext="{{ curricula.name }}" 
+    {% include showhidebutton.html showtext="Show modules" hidetext="Hide modules" 
         target=".{{ curricula.id }}" %}
     <div id="{{ curricula.id }}">
     {% for modules in curricula.modules %}
