--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -4,7 +4,7 @@
  
     <p class="expl">{{ curricula.name }}</p>
     {% include showhidebutton.html showtext=curricula.name hidetext=curricula.name 
-        target=.curricula.id %}
+        target="."curricula.id %}
     <div id="{{ curricula.id }}">
     {% for modules in curricula.modules %}
     <div class="radio-field">
