--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,7 +1,7 @@
 <legend>WAI Curricula module</legend>
 
 {% for curricula in site.data.wai-curricula %}
-{% capture pname %}.{{curricula.id}{% endcapture %}
+{% capture pname %}.{{ curricula.id }}{% endcapture %}
 
 
     <p class="expl">{{ curricula.name }}</p>
