--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -7,12 +7,12 @@
     <p class="expl">{{ curricula.name }}</p>
     {% include showhidebutton.html showtext=curricula.name hidetext=curricula.name 
         target=pname %}
-    <div id="{{ curricula.id }}">
-    {% for modules in curricula.modules %}
-    <div class="radio-field">
-        <input type="checkbox" id="offer-{{ modules.id }}" name="offer-{{ modules.id }}">
-        <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
+    <div class="{{ curricula.id }}">
+        {% for modules in curricula.modules %}
+        <div class="radio-field">
+            <input type="checkbox" id="offer-{{ modules.id }}" name="offer-{{ modules.id }}">
+            <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
+        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
 {% endfor %}
