--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,8 +1,6 @@
 
 
 
-
-
 <legend>WAI Curricula module</legend>
 
 
@@ -19,3 +17,4 @@
     {% endfor %}
 
 {% include excol.html type="end" %}
+{% endfor %}
