--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -19,20 +19,65 @@
     <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
 </div>
         
- -->
+ 
 
 
 
 <legend>WAI Curricula module</legend>
 
+{% include excol.html type="all" %}
 
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" id=curricula.id %}
 {{ curricula.name }}
-{% capture curricula_details_id %}details_{{curricula.id}}{% endcapture %}
-{% include excol.html type="middle" id=curricula_details_id%}
+{% include excol.html type="middle" %}
     {% for modules in curricula.modules %}
-        <a href="{{ modules.link}}" rel="external">{{ modules.id }} - {{ modules.name }}</a>
+        <a href="{{ modules.link}}" rel="external"> {{ modules.name }}</a>
     {% endfor %}
 {% include excol.html type="end" %}
 {% endfor %}
+
+{% include excol.html type="end" %}
+
+-->
+{% include excol.html type="all" %}
+
+{% include excol.html type="start" id="one" %}
+
+### Heading 3
+
+{% include excol.html type="middle" %}
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus incidunt velit quia quisquam odio, minus, blanditiis molestias deserunt facere consequuntur placeat minima odit ex officia est nemo neque aut provident?
+
+{% include excol.html type="start" id="two" %}
+
+#### Heading 4
+
+{% include excol.html type="middle" %}
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et pariatur quam qui deserunt fugiat maxime, eveniet similique aperiam, enim saepe modi in laboriosam reprehenderit optio, repellendus vel iure ut voluptatibus.
+
+{% include excol.html type="end" %}
+
+{% include excol.html type="end" %}
+
+{% include excol.html type="start" id="three" %}
+
+### Heading 3
+
+{% include excol.html type="middle" %}
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat fugiat dicta accusantium odit sed, dolorum suscipit deserunt tempore commodi voluptate eos aut odio, quod magni quis corrupti aspernatur iusto consequatur.
+
+{% include excol.html type="start" id="four" %}
+
+#### Heading 4
+
+{% include excol.html type="middle" %}
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet quibusdam asperiores excepturi consequatur debitis sapiente, in quisquam explicabo blanditiis rem voluptas tempora esse odit beatae dignissimos quas quo doloremque sint.
+
+{% include excol.html type="end" %}
+
+{% include excol.html type="end" %}
