--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -53,5 +53,6 @@
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus incidunt velit quia quisquam odio, minus, blanditiis molestias deserunt facere consequuntur placeat minima odit ex officia est nemo neque aut provident?
 
 {% include excol.html type="end" %}
+{% endfor %}
 
 {% include excol.html type="end" %}
