--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -50,10 +50,10 @@
 
 {% include excol.html type="middle" %}
 
+{% for modules in curricula.modules %}
 Content of the expand/collapse.
 <a href="link" rel="external"> link</a>
-
-
+{% endfor %}
 
 {% include excol.html type="end" %}
 
