--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -51,7 +51,11 @@
 {% include excol.html type="middle" %}
 
 {% for modules in curricula.modules %}
-<a href="{{ modules.link}}" rel="external"> {{ modules.name }}</a>
+<div class="radio-field">
+    <input type="checkbox" id="offer-{{ modules.id }}" name="offer-{{ modules.id }}">
+    <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
+</div>
+
 {% endfor %}
 
 {% include excol.html type="end" %}
