--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,52 +1,12 @@
-<!-- <legend>WAI Curricula module</legend>
-
-{% for curricula in site.data.wai-curricula %}
-{% capture pname %}.{{ curricula.id }}{% endcapture %}
-    {% include showhidebutton.html showtext=curricula.name hidetext=curricula.name 
-        target=pname %}
-    <div class="{{ curricula.id }}">
-        {% for modules in curricula.modules %}
-        <div class="radio-field">
-            <input type="checkbox" id="offer-{{ modules.id }}" name="offer-{{ modules.id }}">
-            <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
-        </div>
-        {% endfor %}
-    </div>
-{% endfor %}
-
-<div class="radio-field">
-    <input type="checkbox" id="offer-{{ modules.id }}" name="offer-{{ modules.id }}">
-    <label for="offer-{{ modules.id }}">{{ modules.name }}</label>
-</div>
-        
- 
-
-
-
-<legend>WAI Curricula module</legend>
-
-{% include excol.html type="all" %}
-
-{% for curricula in site.data.wai-curricula %}
-{% include excol.html type="start" id=curricula.id %}
-{{ curricula.name }}
-{% include excol.html type="middle" %}
-    {% for modules in curricula.modules %}
-        <a href="{{ modules.link}}" rel="external"> {{ modules.name }}</a>
-    {% endfor %}
-{% include excol.html type="end" %}
-{% endfor %}
-
-{% include excol.html type="end" %}
-
--->
-
 <legend>WAI Curricula module</legend>
 
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" id="optional-id" %}
 
-{{ curricula.name }}
+{{ curricula.name }} {% include resource-link.html
+    label="{{curricula.name}}"
+    href="{{curricula.link}}"
+ %}
 
 {% include excol.html type="middle" %}
 
