--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -3,7 +3,7 @@
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" id="optional-id" %}
 
-{{ curricula.name }} {% include resource-link.html
+{{ curricula.name }} {% include {{curricula.link}}
     label="{{curricula.name}}"
     href="{{curricula.link}}"
  %}
