--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -3,12 +3,7 @@
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" id="optional-id" %}
 
-{{ curricula.name }} <a href="{{curricula.link}}" class="more-info">
-    <span class="visuallyhidden">More information about {{curricula.name}}</span>
-    <span aria-hidden="true" class="more-info__icon">
-     {% include icons/info.svg %}
-    </span>
-  </a>
+ <a href="{{curricula.link}}">{{ curricula.name }}</a>
 
 {% include excol.html type="middle" %}
 
