--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -7,7 +7,7 @@
 <a href="{{curricula.link}}" class="more-info">
     <span class="visuallyhidden">More information about the {{curricula.name}}</span>
     <span aria-hidden="true" class="more-info__icon">
-     {% include icons/info.svg %}
+     info
     </span>
   </a>
 
