--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -7,10 +7,15 @@
 <a href="{{curricula.link}}" class="more-info">
     <span class="visuallyhidden">More information about the {{curricula.name}}</span>
     <span aria-hidden="true" class="more-info__icon">
-     info
+    info
     </span>
   </a>
 
+
+  {% include resource-link.html
+    label="A.3 Editing-views are operable"
+    href="https://www.w3.org/TR/ATAG20/#principle_a1"
+ %}
 
 
 <a href="{{curricula.link}}">{{ curricula.name }}</a>
