--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -13,8 +13,8 @@
 
 
   {% include resource-link.html
-    label="A.3 Editing-views are operable"
-    href="https://www.w3.org/TR/ATAG20/#principle_a1"
+    label="{{curricula.name}}"
+    href="{{curricula.link}}"
  %}
 
 
