--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -2,7 +2,7 @@
 
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" id="optional-id" %}
-{% include resource-link.html label="{{curricula.link}}" href="" %}
+{% include resource-link.html label="label" href="link" %}
 
 
 <a href="{{curricula.link}}">{{ curricula.name }}</a>
