--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -3,7 +3,7 @@
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" id="optional-id" %}
 
-{% include resource-link.html label="label" href="{{ curricula.link} }}" %}
+{% include resource-link.html label="label" href="{{ curricula.link }}" %}
 
 
 <a href="{{curricula.link}}">{{ curricula.name }}</a>
