--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -2,10 +2,8 @@
 
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" id="optional-id" %}
-
+{{ curricula.name }}
 {% include resource-link.html label=curricula.name href=curricula.link %}
-
-<a href="{{curricula.link}}">{{ curricula.name }}</a>
 
 {% include excol.html type="middle" %}
 
