--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -2,7 +2,9 @@
 
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" id="optional-id" %}
-{{ curricula.name }}{% include resource-link.html label=curricula.name href=curricula.link %}
+
+{% capture info_label%}More information about the {{curricula.name}}{% endcapture %}
+{{ curricula.name }}{% include resource-link.html label=info_label href=curricula.link %}
 
 {% include excol.html type="middle" %}
 
