--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,5 +1,4 @@
-<legend>WAI Curricula module{% include resource-link.html label="Curricula on Web Accessibility"
-    href="https://www.w3.org/WAI/curricula/" %}</legend>
+<legend>WAI Curricula module</legend>
 
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" id="optional-id" %}
