--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -84,8 +84,10 @@ main>header {
 }
 
 .duration-input {
-  width: 40% !important;
+  width: 25% !important;
   margin-top: 1em;
+  padding: 8px;
+  display: inline;
 }
 
 
