--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -169,6 +169,11 @@ details>div{
 }
 */
 
+#form-submit-offer details>div{
+
+}
+
+
 details>div{
   border-top: solid 1px var(--line-grey);
   margin-left: -48px;
