--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -140,7 +140,7 @@ details dt::after {
   margin: 0 0.5em 0 0;
 }
 
-#form-submit-an-offer INPUT:not([type="radio"]):not([type="checkbox"]) ~ LABEL {
+#form-submit-an-offer INPUT:not([type="radio"]):not([type="checkbox"]) + LABEL {
   font-size: 1.25rem;
   font-weight: 700;
 }
